next debit card

--- a/assets/styles/debit.scss
+++ b/assets/styles/debit.scss
@@ -1,3 +1,9 @@
 .debit-card__main-container {
   background-color: $background-blue;
+  padding: 24px;
+}
+
+.debit-card__balance-title {
+  @include mediumTitle;
+  margin-top: 24px;
 }
