--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,23 +1,19 @@
 @import 'colors';
+@import 'typography';
 
 :root {
   font-family: 'Nunito', Helvetica, Arial;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  touch-action: manipulation;
-}
+// *,
+// *::before,
+// *::after {
+//   box-sizing: border-box;
+//   margin: 0;
+//   touch-action: manipulation;
+// }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  padding: 0;
-  margin: 0;
+h1 {
+  @include h1;
+  color: white;
 }
