--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,17 +1,16 @@
 @import 'colors';
 @import 'typography';
+@import 'variables'; //TODO: make all 24px as $default-spacing
 
 :root {
   font-family: 'Nunito', Helvetica, Arial;
 }
 
-// *,
-// *::before,
-// *::after {
-//   box-sizing: border-box;
-//   margin: 0;
-//   touch-action: manipulation;
-// }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 h1 {
   @include h1;
