--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,6 +1,7 @@
 @import 'colors';
 @import 'typography';
 @import 'variables'; //TODO: make all 24px as $default-spacing
+@import 'mixins';
 
 :root {
   font-family: 'Nunito', Helvetica, Arial;
