--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,6 +1,6 @@
 @import 'colors';
 @import 'typography';
-@import 'variables'; //TODO: make all 24px as $default-spacing
+@import 'variables';
 @import 'mixins';
 
 :root {
