--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,7 +1,8 @@
 $white: #fff;
 $black: #000;
 $green: #43976c;
-$background-blue: #0c365a;
+$aspire-dark-blue: #0c365a;
 $aspire-green: #01d167;
+$aspire-green-light: #01d16780;
 $text-blue: #25345f;
 $text-gray: #4025345f;
